<?xml version="1.0" encoding="UTF-8"?>
<!--
// Copyright (c) 2013, Cloudera, inc.
// Confidential Cloudera Information: Covered by NDA.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>kudu</groupId>
    <artifactId>kudu-parent</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Kudu</name>

    <description>
        Kudu.
    </description>

    <!-- Properties Management -->
    <properties>
        <protobuf.version>2.5.0</protobuf.version>
        <netty.version>3.8.0.Final</netty.version>
        <log4j.version>1.2.17</log4j.version>
        <guava.version>12.0.1</guava.version>
        <mockito-all.version>1.9.0</mockito-all.version>
        <junit.version>4.11</junit.version>
        <async.version>1.4.0</async.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <testdata.dir>target/testdata</testdata.dir>
        <antrun.version>1.7</antrun.version>
        <surefire.version>2.16</surefire.version>
        <slf4j.version>1.6.1</slf4j.version>
        <maven.assembly.version>2.2.1</maven.assembly.version>
        <protoc.version>0.1.10</protoc.version>
        <hadoop.version>2.5.0-cdh5.3.2</hadoop.version>
    </properties>

    <modules>
        <module>kudu-client</module>
        <module>kudu-client-tools</module>
        <module>kudu-csd</module>
        <module>kudu-mapreduce</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.3.2</version>
                <executions>
                    <execution>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
                <configuration>
                    <failIfNoTests>false</failIfNoTests>
                    <reuseForks>false</reuseForks>
                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                    <systemPropertyVariables>
                        <masterAddress>localhost</masterAddress>
                        <masterPort>64000</masterPort>
                        <flagsPath>../test-resources/flags</flagsPath>
                        <baseDirPath>${basedir}/target/testdata</baseDirPath>
                        <startCluster>true</startCluster>
                    </systemPropertyVariables>
                    <argLine>-enableassertions -Xmx1900m -XX:MaxPermSize=100m
                    -Djava.security.egd=file:/dev/./urandom -Djava.net.preferIPv4Stack=true
                    -Djava.awt.headless=true</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>${antrun.version}</version>
                <executions>
                    <execution>
                        <phase>test-compile</phase>
                        <configuration>
                            <target>
                                <delete dir="${testdata.dir}"/>
                                <mkdir dir="${testdata.dir}"/>
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <pluginRepositories>
      <!-- For maven-protoc-plugin -->
      <pluginRepository>
        <id>protoc-plugin</id>
        <url>http://maven.davidtrott.com/repository</url>
      </pluginRepository>
    </pluginRepositories>

  <repositories>
    <repository>
      <id>cdh.repo</id>
      <url>https://repository.cloudera.com/artifactory/cloudera-repos</url>
      <name>Cloudera Repositories</name>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
 </repositories>
</project>
